Add max-sm and max-md modifier support.

--- a/nbs/core/base.ipynb
+++ b/nbs/core/base.ipynb
@@ -374,11 +374,21 @@
     "    def sm(self) -> 'BaseUtility':\n",
     "        \"\"\"Apply small breakpoint modifier.\"\"\"\n",
     "        return self.with_modifiers(\"sm\")\n",
+    "\n",
+    "    @property\n",
+    "    def max_sm(self) -> 'BaseUtility':\n",
+    "        \"\"\"Apply max small breakpoint modifier variant.\"\"\"\n",
+    "        return self.with_modifiers(\"max-sm\")\n",
     "    \n",
     "    @property\n",
     "    def md(self) -> 'BaseUtility':\n",
     "        \"\"\"Apply medium breakpoint modifier.\"\"\"\n",
     "        return self.with_modifiers(\"md\")\n",
+    "\n",
+    "    @property\n",
+    "    def max_md(self) -> 'BaseUtility':\n",
+    "        \"\"\"Apply max medium breakpoint modifier variant.\"\"\"\n",
+    "        return self.with_modifiers(\"max-md\")\n",
     "    \n",
     "    @property\n",
     "    def lg(self) -> 'BaseUtility':\n",
