--- a/nbs/core/testing.ipynb
+++ b/nbs/core/testing.ipynb
@@ -780,7 +780,7 @@
     "from cjm_fasthtml_tailwind.utilities.backgrounds import bg_linear, from_color, to_color\n",
     "from cjm_fasthtml_tailwind.utilities.typography import text, font, text_align, line_through\n",
     "from cjm_fasthtml_tailwind.utilities.effects import shadow, ring, ring_color, shadow_color\n",
-    "from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition\n",
+    "from cjm_fasthtml_tailwind.utilities.transitions_and_animation import transition, ease, duration, animate\n",
     "from cjm_fasthtml_tailwind.utilities.borders import outline, outline_offset, outline_style\n",
     "\n",
     "app2, rt2 = create_test_app()\n",
@@ -967,7 +967,8 @@
     "                    bg.white, rounded.lg, shadow.lg,\n",
     "                    overflow.hidden,\n",
     "                    position.relative,\n",
-    "                    shadow._2xl.hover, transition.shadow, shadow_color.amber._400.hover,\n",
+    "                    shadow._2xl.hover, transition.shadow, shadow_color.amber._400.hover, \n",
+    "                    ease._in, duration._500,\n",
     "                    display_tw.flex,\n",
     "                    flex_direction.col\n",
     "                )\n",
