--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -630,7 +630,9 @@
     "    \n",
     "    # Test responsive modifiers\n",
     "    assert str(p(4).sm) == \"sm:p-4\"\n",
+    "    assert str(p(4).max_sm) == \"max-sm:p-4\"\n",
     "    assert str(m.x(8).md) == \"md:mx-8\"\n",
+    "    assert str(m.x(8).max_md) == \"max-md:mx-8\"\n",
     "    assert str(p.y(0).lg) == \"lg:py-0\"\n",
     "    assert str(m.negative(4).xl) == \"xl:-m-4\"\n",
     "    \n",
