--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -110,54 +110,54 @@
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
     "    cli_explorer --> cli_utils\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_imports\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_search\n",
-    "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_core_utils_discovery\n",
     "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_factory_extraction\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
     "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_core_utils_discovery\n",
+    "    cli_explorer --> cli_example_discovery\n",
+    "    cli_explorer --> cli_search\n",
+    "    cli_explorer --> cli_imports\n",
     "    cli_factory_extraction --> cli_utils\n",
     "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_utils\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_helper_discovery\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_factory_extraction\n",
     "    cli_imports --> cli_core_utils_discovery\n",
-    "    cli_search --> cli_factory_extraction\n",
-    "    cli_search --> cli_helper_discovery\n",
+    "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_utils\n",
     "    cli_search --> cli_utils\n",
     "    cli_search --> cli_example_discovery\n",
-    "    cli_test_code --> cli_helper_discovery\n",
-    "    cli_test_code --> cli_utils\n",
+    "    cli_search --> cli_factory_extraction\n",
+    "    cli_search --> cli_helper_discovery\n",
     "    cli_test_code --> cli_factory_extraction\n",
+    "    cli_test_code --> cli_utils\n",
+    "    cli_test_code --> cli_helper_discovery\n",
+    "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_borders\n",
+    "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_backgrounds\n",
     "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_effects\n",
-    "    core_testing --> utilities_flexbox_and_grid\n",
-    "    core_testing --> utilities_typography\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_spacing\n",
-    "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> core_base\n",
     "    core_testing --> core_resources\n",
-    "    core_testing --> utilities_transitions_and_animation\n",
-    "    utilities_accessibility --> core_base\n",
+    "    core_testing --> core_base\n",
+    "    core_testing --> utilities_spacing\n",
+    "    core_testing --> utilities_typography\n",
     "    utilities_accessibility --> builders_scales\n",
     "    utilities_accessibility --> utilities_layout\n",
+    "    utilities_accessibility --> core_base\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
     "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_base\n",
-    "    utilities_borders --> builders_scales\n",
     "    utilities_borders --> builders_colors\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_effects --> core_base\n",
-    "    utilities_effects --> builders_scales\n",
     "    utilities_effects --> builders_colors\n",
-    "    utilities_filters --> core_base\n",
+    "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> builders_colors\n",
+    "    utilities_filters --> core_base\n",
     "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
@@ -166,13 +166,13 @@
     "    utilities_interactivity --> builders_colors\n",
     "    utilities_layout --> core_base\n",
     "    utilities_layout --> builders_scales\n",
-    "    utilities_sizing --> core_base\n",
     "    utilities_sizing --> builders_scales\n",
-    "    utilities_spacing --> core_base\n",
+    "    utilities_sizing --> core_base\n",
     "    utilities_spacing --> builders_scales\n",
+    "    utilities_spacing --> core_base\n",
+    "    utilities_svg --> builders_colors\n",
     "    utilities_svg --> core_base\n",
     "    utilities_svg --> builders_scales\n",
-    "    utilities_svg --> builders_colors\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
@@ -839,18 +839,34 @@
     "    def sm(self) -> 'BaseUtility':\n",
     "            \"\"\"Apply small breakpoint modifier.\"\"\"\n",
     "            return self.with_modifiers(\"sm\")\n",
+    "    \n",
+    "        @property\n",
+    "        def max_sm(self) -> 'BaseUtility'\n",
+    "        \"Apply small breakpoint modifier.\"\n",
+    "    \n",
+    "    def max_sm(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply max small breakpoint modifier variant.\"\"\"\n",
+    "            return self.with_modifiers(\"max-sm\")\n",
     "        \n",
     "        @property\n",
     "        def md(self) -> 'BaseUtility'\n",
-    "        \"Apply small breakpoint modifier.\"\n",
+    "        \"Apply max small breakpoint modifier variant.\"\n",
     "    \n",
     "    def md(self) -> 'BaseUtility':\n",
     "            \"\"\"Apply medium breakpoint modifier.\"\"\"\n",
     "            return self.with_modifiers(\"md\")\n",
+    "    \n",
+    "        @property\n",
+    "        def max_md(self) -> 'BaseUtility'\n",
+    "        \"Apply medium breakpoint modifier.\"\n",
+    "    \n",
+    "    def max_md(self) -> 'BaseUtility':\n",
+    "            \"\"\"Apply max medium breakpoint modifier variant.\"\"\"\n",
+    "            return self.with_modifiers(\"max-md\")\n",
     "        \n",
     "        @property\n",
     "        def lg(self) -> 'BaseUtility'\n",
-    "        \"Apply medium breakpoint modifier.\"\n",
+    "        \"Apply max medium breakpoint modifier variant.\"\n",
     "    \n",
     "    def lg(self) -> 'BaseUtility':\n",
     "            \"\"\"Apply large breakpoint modifier.\"\"\"\n",
