--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -39,6 +39,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "from enum import Enum\n",
     "from typing import Dict, List, Union, Optional, Tuple, Callable, Any\n",
     "from dataclasses import dataclass\n",
     "from cjm_fasthtml_tailwind.core.base import (\n",
@@ -1014,7 +1015,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '1/6', '2/12', '1/5', '1/4', '3/12', '4/12', '2/6', '1/3', '2/5', '5/12', '3/6', '6/12', '2/4', '1/2', '7/12', '3/5', '4/6', '8/12', '2/3', '9/12', '3/4', '4/5', '10/12', '5/6', '11/12']\n"
+      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '2/6', '4/12', '1/3', '2/5', '5/12', '6/12', '1/2', '2/4', '3/6', '7/12', '3/5', '4/6', '2/3', '8/12', '3/4', '9/12', '4/5', '5/6', '10/12', '11/12']\n"
      ]
     }
    ],
@@ -1439,7 +1440,19 @@
    "id": "e9e116f8-dbba-4dd3-9d18-380f1d70d33b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#| export\n",
+    "def enums_to_simple_factory(prefix:str, # The factory prefix\n",
+    "                            src_enums:List[Enum] # The source enums\n",
+    "                           ) -> SimpleFactory: # The resulting simple factory\n",
+    "    \"\"\"Create a SimpleFactory using a string prefix and the values from a list of enums\"\"\"\n",
+    "    values_dict = {\n",
+    "        member.value: f\"{prefix}-{member.value}\" \n",
+    "        for src_enum in src_enums \n",
+    "        for member in src_enum \n",
+    "    }\n",
+    "    return SimpleFactory(values_dict)"
+   ]
   },
   {
    "cell_type": "code",
