Update enums_to_simple_factory helper function.

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -109,60 +109,60 @@
     "    builders_colors --> core_base\n",
     "    builders_scales --> core_base\n",
     "    cli_example_discovery --> cli_utils\n",
+    "    cli_explorer --> cli_example_discovery\n",
     "    cli_explorer --> cli_utils\n",
     "    cli_explorer --> cli_factory_extraction\n",
-    "    cli_explorer --> cli_pattern_scanner\n",
-    "    cli_explorer --> cli_example_discovery\n",
-    "    cli_explorer --> cli_test_code\n",
-    "    cli_explorer --> cli_helper_discovery\n",
     "    cli_explorer --> cli_core_utils_discovery\n",
-    "    cli_explorer --> cli_search\n",
     "    cli_explorer --> cli_imports\n",
-    "    cli_factory_extraction --> core_base\n",
+    "    cli_explorer --> cli_pattern_scanner\n",
+    "    cli_explorer --> cli_helper_discovery\n",
+    "    cli_explorer --> cli_test_code\n",
+    "    cli_explorer --> cli_search\n",
     "    cli_factory_extraction --> cli_utils\n",
-    "    cli_helper_discovery --> cli_utils\n",
+    "    cli_factory_extraction --> core_base\n",
     "    cli_helper_discovery --> cli_example_discovery\n",
-    "    cli_imports --> cli_core_utils_discovery\n",
+    "    cli_helper_discovery --> cli_utils\n",
     "    cli_imports --> cli_factory_extraction\n",
-    "    cli_imports --> cli_utils\n",
     "    cli_imports --> cli_helper_discovery\n",
+    "    cli_imports --> cli_utils\n",
+    "    cli_imports --> cli_core_utils_discovery\n",
     "    cli_search --> cli_utils\n",
-    "    cli_search --> cli_factory_extraction\n",
-    "    cli_search --> cli_example_discovery\n",
     "    cli_search --> cli_helper_discovery\n",
+    "    cli_search --> cli_example_discovery\n",
+    "    cli_search --> cli_factory_extraction\n",
     "    cli_test_code --> cli_factory_extraction\n",
-    "    cli_test_code --> cli_utils\n",
     "    cli_test_code --> cli_helper_discovery\n",
+    "    cli_test_code --> cli_utils\n",
     "    core_testing --> utilities_layout\n",
     "    core_testing --> utilities_sizing\n",
+    "    core_testing --> utilities_borders\n",
     "    core_testing --> utilities_flexbox_and_grid\n",
+    "    core_testing --> utilities_effects\n",
     "    core_testing --> utilities_spacing\n",
-    "    core_testing --> core_base\n",
-    "    core_testing --> utilities_typography\n",
     "    core_testing --> utilities_transitions_and_animation\n",
     "    core_testing --> utilities_backgrounds\n",
-    "    core_testing --> utilities_borders\n",
-    "    core_testing --> utilities_effects\n",
     "    core_testing --> core_resources\n",
-    "    utilities_accessibility --> builders_scales\n",
-    "    utilities_accessibility --> utilities_layout\n",
+    "    core_testing --> utilities_typography\n",
+    "    core_testing --> core_base\n",
     "    utilities_accessibility --> core_base\n",
-    "    utilities_backgrounds --> builders_scales\n",
+    "    utilities_accessibility --> utilities_layout\n",
+    "    utilities_accessibility --> builders_scales\n",
     "    utilities_backgrounds --> core_base\n",
     "    utilities_backgrounds --> builders_colors\n",
-    "    utilities_borders --> builders_scales\n",
+    "    utilities_backgrounds --> builders_scales\n",
     "    utilities_borders --> core_base\n",
     "    utilities_borders --> builders_colors\n",
-    "    utilities_effects --> builders_scales\n",
+    "    utilities_borders --> builders_scales\n",
     "    utilities_effects --> core_base\n",
     "    utilities_effects --> builders_colors\n",
-    "    utilities_filters --> builders_scales\n",
+    "    utilities_effects --> builders_scales\n",
     "    utilities_filters --> builders_colors\n",
     "    utilities_filters --> core_base\n",
+    "    utilities_filters --> builders_scales\n",
     "    utilities_flexbox_and_grid --> builders_scales\n",
     "    utilities_flexbox_and_grid --> core_base\n",
-    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> core_base\n",
+    "    utilities_interactivity --> builders_scales\n",
     "    utilities_interactivity --> builders_colors\n",
     "    utilities_layout --> builders_scales\n",
     "    utilities_layout --> core_base\n",
@@ -175,12 +175,12 @@
     "    utilities_svg --> builders_scales\n",
     "    utilities_tables --> core_base\n",
     "    utilities_tables --> builders_scales\n",
-    "    utilities_transforms --> builders_scales\n",
     "    utilities_transforms --> core_base\n",
-    "    utilities_transitions_and_animation --> builders_scales\n",
+    "    utilities_transforms --> builders_scales\n",
     "    utilities_transitions_and_animation --> core_base\n",
-    "    utilities_typography --> builders_scales\n",
+    "    utilities_transitions_and_animation --> builders_scales\n",
     "    utilities_typography --> core_base\n",
+    "    utilities_typography --> builders_scales\n",
     "    utilities_typography --> builders_colors\n",
     "```\n",
     "\n",
@@ -4446,7 +4446,8 @@
     "\n",
     "```python\n",
     "def enums_to_simple_factory(prefix:str, # The factory prefix\n",
-    "                            src_enums:List[Enum] # The source enums\n",
+    "                            src_enums:List[Enum], # The source enums\n",
+    "                            doc:Optional[str]=None # The factory docstring.\n",
     "                           ) -> SimpleFactory: # The resulting simple factory\n",
     "    \"Create a SimpleFactory using a string prefix and the values from a list of enums\"\n",
     "```\n",
