--- a/nbs/builders/scales.ipynb
+++ b/nbs/builders/scales.ipynb
@@ -1015,7 +1015,7 @@
      "output_type": "stream",
      "text": [
       "Generated fractions:\n",
-      "['1/12', '2/12', '1/6', '1/5', '3/12', '1/4', '2/6', '4/12', '1/3', '2/5', '5/12', '6/12', '1/2', '2/4', '3/6', '7/12', '3/5', '4/6', '2/3', '8/12', '3/4', '9/12', '4/5', '5/6', '10/12', '11/12']\n"
+      "['1/12', '2/12', '1/6', '1/5', '1/4', '3/12', '4/12', '1/3', '2/6', '2/5', '5/12', '6/12', '1/2', '3/6', '2/4', '7/12', '3/5', '2/3', '8/12', '4/6', '9/12', '3/4', '4/5', '5/6', '10/12', '11/12']\n"
      ]
     }
    ],
@@ -1443,7 +1443,8 @@
    "source": [
     "#| export\n",
     "def enums_to_simple_factory(prefix:str, # The factory prefix\n",
-    "                            src_enums:List[Enum] # The source enums\n",
+    "                            src_enums:List[Enum], # The source enums\n",
+    "                            doc:Optional[str]=None # The factory docstring.\n",
     "                           ) -> SimpleFactory: # The resulting simple factory\n",
     "    \"\"\"Create a SimpleFactory using a string prefix and the values from a list of enums\"\"\"\n",
     "    values_dict = {\n",
@@ -1451,7 +1452,7 @@
     "        for src_enum in src_enums \n",
     "        for member in src_enum \n",
     "    }\n",
-    "    return SimpleFactory(values_dict)"
+    "    return SimpleFactory(values_dict, doc)"
    ]
   },
   {
