Update list of common rotation angles.

--- a/nbs/utilities/transforms.ipynb
+++ b/nbs/utilities/transforms.ipynb
@@ -307,7 +307,7 @@
    "source": [
     "#| export\n",
     "# Rotate angle values\n",
-    "ROTATE_ANGLES = [0, 1, 2, 3, 6, 12, 45, 90, 180] # Common rotation angles in degrees\n",
+    "ROTATE_ANGLES = list(range(360)) # Common rotation angles in degrees\n",
     "\n",
     "# Configuration for rotate utilities\n",
     "ROTATE_CONFIG = ScaleConfig(\n",
